--- a/src/Gallery.css
+++ b/src/Gallery.css
@@ -1,8 +1,9 @@
-/* .App {
+
+.App {
     text-align: center;
   }
   
-  .App-logo {
+  /* .App-logo {
     height: 40vmin;
     pointer-events: none;
   }
@@ -11,9 +12,9 @@
     .App-logo {
       animation: App-logo-spin infinite 20s linear;
     }
-  }
+  } */
   
-  .App-header {
+  /* .App-header {
     background-color: #282c34;
     min-height: 100vh;
     display: flex;
@@ -22,30 +23,43 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
-  }
+  } */
   
-  .App-link {
+  /* .App-link {
     color: #61dafb;
-  }
+  } */
   
-  @keyframes App-logo-spin {
+  /* @keyframes App-logo-spin {
     from {
       transform: rotate(0deg);
     }
     to {
       transform: rotate(360deg);
-    }
-  } */
+    } */
+  /* } */
 
   /* container */
   .container{
-    display: grid;
+  display: grid;
 	grid-gap: 20px;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   }
+  .menu{
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    }
+
+  .submenu{
+    background-color: rgb(221, 221, 208);
+    height: 200px;
+    width: 200px;
+  }
+
   .block{
-    background-color: rgb(251, 255, 0);
+  background-color: rgb(251, 255, 0);
 	height: 200px;
 	width: 200px;
   }
